Fix: use Docker with Python 3.10 to avoid pydantic bug

--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,6 @@
 services:
   - type: web
     name: axis-disposal-form
-    env: python
+    env: docker
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
-    pythonVersion: 3.10.13
+    dockerfilePath: Dockerfile
