--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.95.2
+fastapi>=0.110.0
 uvicorn==0.29.0
-pydantic==1.10.13
+pydantic>=2.0
 reportlab==4.1.0
 python-multipart==0.0.6
 requests==2.31.0
